# 8puzzle

./: 8puzzle.cabal  LICENSE  README.md
src/: Board.hs  Main.hs  Move.hs  Search.hs  Tests.hs
test/: Main.hs
