name:                8puzzle
version:             0.1.0.0
homepage:            https://github.com/tempate/8puzzle#readme
license:             GPLv3
license-file:        LICENSE
author:              Daniel Díaz
maintainer:          dani.diaz@mail.com
copyright:           2021 Daniel Díaz
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

Library
  hs-source-dirs:     src
  exposed-modules:    Board
                      Move
                      Search
  build-depends:      base,
                      QuickCheck

Test-Suite 8puzzle-tests
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  build-depends:      8puzzle,
                      base,
                      QuickCheck
  other-modules:      Main
                      Tests
      